made changes for an example

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 						I am hoping to build the foundation for future success, with this class. I feel like this class will teach me the fundamentals of becoming a life long student of coding!
 						Some of my more concrete goals would be to learn the basics to carry me into the Javascript Immersion class, and learn how to make the best websites possible.
 					</p>
+					<p>
+						A change for an example for git.
+					</p>
 				</article>
 				<article>
 					<h2>What I don't know!</h2>
